--- a/.github/workflows/build-lib-akdanmaku.yml
+++ b/.github/workflows/build-lib-akdanmaku.yml
@@ -51,7 +51,6 @@ jobs:
         run: |
           echo "=== 验证akdanmaku目录结构 ==="
           ls -la ${{ env.SOURCE_DIR }}/
-          
           if [ -f "${{ env.SOURCE_DIR }}/build.gradle.kts" ] || [ -f "${{ env.SOURCE_DIR }}/build.gradle" ]; then
             echo "找到构建文件"
           else
@@ -96,7 +95,6 @@ jobs:
         run: |
           echo "=== 开始编译弹幕库 (akdanmaku) ==="
           ./gradlew :akdanmaku:assembleRelease --no-daemon --stacktrace
-          
           echo "=== akdanmaku 编译完成 ==="
           echo "查找AAR产物:"
           AAR_FILE=$(find ${{ env.AAR_PATH }} -name "*.aar" -type f | head -1)
@@ -111,28 +109,27 @@ jobs:
           fi
 
       # 上传构建产物
-      - name: Upload AAR artifact
-        uses: actions/upload-artifact@main
-        with:
-          path: akdanmaku-source/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}
-          retention-days: 30
+      # - name: Upload aar artifact
+      #   uses: actions/upload-artifact@main
+      #   with:
+      #     path: akdanmaku-source/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}
+      #     retention-days: 30
 
-      # 可选：创建GitHub Release（如果需要独立发布）
-      - name: Create github release for akdanmaku
-        if: ${{ github.event_name == 'workflow_dispatch' }}
-        uses: softprops/action-gh-release@master
-        with:
-          tag_name: ${{ env.BUILD_DATE }}-akdanmaku
-          draft: false
-          prerelease: false
-          files: |
-            akdanmaku-source/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}
-            
+      # - name: Create github release for akdanmaku
+      #   if: ${{ github.event_name == 'workflow_dispatch' }}
+      #   uses: softprops/action-gh-release@master
+      #   with:
+      #     tag_name: ${{ env.BUILD_DATE }}-akdanmaku
+      #     draft: false
+      #     prerelease: false
+      #     files: |
+      #       akdanmaku-source/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}
+
       # 使用SSH Deploy Key的方式来实现对bv-libs的推送
       # 生成ED25519密钥对（更安全，推荐）
       # ssh-keygen -t ed25519 -C "github-actions@github.com" -f deploy_key
       # 这将在当前目录生成私钥deploy_key和公钥deploy_key.pub
-      
+
       # 将公钥添加到目标仓库的Deploy Keys:
       # zxgv5/bv-libs → "Settings" → "Deploy keys" → "Add deploy key"
       # 填写：
@@ -140,14 +137,14 @@ jobs:
       # Key: 粘贴 deploy_key.pub 内容
       # 重要： 一定要勾选 "Allow write access"
       # 然后点击 "Add key"
-      
+
       # 将私钥添加到源仓库的Secrets：
       # zxgv5/android-ci → "Settings" → "Secrets and variables" → "Actions" → "New repository secret"
       # 填写：
       # Name: BV_LIBS_DEPLOY_KEY
       # Secret: 粘贴 deploy_key 文件的完整内容（包括 -----BEGIN OPENSSH PRIVATE KEY----- 和 -----END OPENSSH PRIVATE KEY-----）
       # 点击 "Add secret"
-      
+
       - name: Push akdanmaku aar to bv-libs repository
         env:
           TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
@@ -156,76 +153,62 @@ jobs:
           echo "Setting up SSH configuration..."
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          
           # 写入私钥
           echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          
           # 配置 SSH 不验证主机（可选，简化配置）
           echo "Host github.com" >> ~/.ssh/config
           echo "  StrictHostKeyChecking no" >> ~/.ssh/config
           echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
           chmod 600 ~/.ssh/config
-          
           # 或者使用 ssh-keyscan 添加已知主机（更安全）
           # ssh-keyscan github.com >> ~/.ssh/known_hosts
           # chmod 644 ~/.ssh/known_hosts
-          
           # 测试 SSH 连接
           echo "Testing SSH connection to GitHub..."
           ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
-          
           # 设置 Git 配置
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git config --global init.defaultBranch main
-          
           # 克隆目标仓库（使用 SSH）
           cd "$GITHUB_WORKSPACE"
           echo "Cloning target repository: ${{ env.TARGET_REPO }}"
           git clone ${{ env.TARGET_REPO }} target-repo
           cd target-repo
-          
           # 确保在 main 分支
           git checkout main
-          
-          # 复制新的 AAR 文件到目标位置
+          # 复制新的 aar 文件到目标位置
           SOURCE_AAR="$GITHUB_WORKSPACE/akdanmaku-source/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}"
           TARGET_DIR="akDanmaku"
-          
-          # 检查 AAR 文件是否存在
+          # 检查 aar 文件是否存在
           if [ -f "$SOURCE_AAR" ]; then
-            echo "✓ Found AAR file: $SOURCE_AAR"
-            
+            echo "✓ Found aar file: $SOURCE_AAR"
             # 确保目标目录存在
             mkdir -p "$TARGET_DIR"
-                       
             # 复制新文件
-            echo "Copying new AAR file..."
+            echo "Copying new aar file..."
             cp -v "$SOURCE_AAR" "$TARGET_DIR/"
-            
             # 提交更改
             echo "Committing changes..."
             git add "$TARGET_DIR/${{ env.AAR_NAME }}"
-            
             # 检查是否有更改
             if git diff --cached --quiet; then
               echo "No changes to commit."
             else
-              git commit -m "Update akDanmaku AAR - ${{ env.BUILD_DATE }} [CI]"
+              git commit -m "Update akDanmaku aar - ${{ env.BUILD_DATE }} [CI]"
               echo "Pushing to remote repository..."
               git push origin main
-              echo "✓ Successfully pushed akDanmaku AAR to ${{ env.TARGET_REPO }}"
+              echo "✓ Successfully pushed akDanmaku aar to ${{ env.TARGET_REPO }}"
             fi
           else
-            echo "✗ Error: AAR file not found at $SOURCE_AAR"
-            echo "Searching for AAR files..."
+            echo "✗ Error: aar file not found at $SOURCE_AAR"
+            echo "Searching for aar files..."
             find "$GITHUB_WORKSPACE/akdanmaku-source/akdanmaku/" -name "*.aar" -type f 2>/dev/null | while read file; do
               echo "  Found: $file"
             done
             exit 1
           fi
-
-          # 清理 SSH 密钥（安全考虑）
+          # 清理 SSH 密钥
           rm -f ~/.ssh/id_ed25519
           rm -f ~/.ssh/config
