--- a/.github/workflows/build-lib-media3-container.yml
+++ b/.github/workflows/build-lib-media3-container.yml
@@ -16,54 +16,51 @@ jobs:
         run: |
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
-    
+
       - name: Checkout repo
         uses: actions/checkout@main
-      
+
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-          
+
       - name: Setup jdk 17
         uses: actions/setup-java@main
         with:
           distribution: 'temurin'
           java-version: '17'
-        
+
       - name: Clone androidx media repository
         run: |
           cd "$GITHUB_WORKSPACE"
           git clone https://github.com/androidx/media -b release --depth=1
-          
+
       - name: Build container aar
         run: |
           cd "$GITHUB_WORKSPACE"/media
-          
           # 清理之前的构建
           ./gradlew clean
-          
-          # 构建 release AAR
+          # 构建 release aar
           ./gradlew lib-container:assembleRelease --no-daemon --stacktrace
-          
-          # 验证 AAR 文件是否存在
+          # 验证 aar 文件是否存在
           OUT_PATH="libraries/container/buildout/outputs/aar"
           if [ -d "$OUT_PATH" ]; then
-            echo "Generated AAR files:"
+            echo "Generated aar files:"
             ls -la "$OUT_PATH"/
           else
-            echo "Error: AAR output directory not found"
+            echo "Error: aar output directory not found"
             ls -la libraries/container/build/
             exit 1
           fi
-          
-      - name: Create github release
-        uses: softprops/action-gh-release@master
-        with:
-          tag_name: ${{env.BUILD_DATE}}-containerlib
-          files: |
-            ${{ env.AAR_PATH }}/*
-          draft: false
-          prerelease: false
+
+      # - name: Create github release
+      #   uses: softprops/action-gh-release@master
+      #   with:
+      #     tag_name: ${{env.BUILD_DATE}}-containerlib
+      #     draft: false
+      #     prerelease: false
+      #     files: |
+      #       ${{ env.AAR_PATH }}/*
 
       - name: Push container aar to bv-libs repository
         env:
@@ -73,72 +70,59 @@ jobs:
           echo "Setting up SSH configuration..."
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          
           # 写入私钥
           echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          
           # 配置 SSH 不验证主机
           echo "Host github.com" >> ~/.ssh/config
           echo "  StrictHostKeyChecking no" >> ~/.ssh/config
           echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
           chmod 600 ~/.ssh/config
-          
           # 测试 SSH 连接
           echo "Testing SSH connection to GitHub..."
           ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
-          
           # 设置 Git 配置
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git config --global init.defaultBranch main
-          
           # 克隆目标仓库
           cd "$GITHUB_WORKSPACE"
           echo "Cloning target repository: ${{ env.TARGET_REPO }}"
           git clone ${{ env.TARGET_REPO }} target-repo
           cd target-repo
-          
           # 确保在 main 分支
           git checkout main
-          
-          # 复制新的 AAR 文件到目标位置
+          # 复制新的 aar 文件到目标位置
           SOURCE_AAR="$GITHUB_WORKSPACE/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}"
           TARGET_DIR="container"
-          
-          # 检查 AAR 文件是否存在
+          # 检查 aar 文件是否存在
           if [ -f "$SOURCE_AAR" ]; then
-            echo "✓ Found AAR file: $SOURCE_AAR"
-            
+            echo "✓ Found aar file: $SOURCE_AAR"
             # 确保目标目录存在
             mkdir -p "$TARGET_DIR"
-            
             # 复制新文件
-            echo "Copying new AAR file..."
+            echo "Copying new aar file..."
             cp -v "$SOURCE_AAR" "$TARGET_DIR/"
-            
             # 提交更改
             echo "Committing changes..."
             git add "$TARGET_DIR/${{ env.AAR_NAME }}"
-            
             # 检查是否有更改
             if git diff --cached --quiet; then
               echo "No changes to commit."
             else
-              git commit -m "Update Container AAR - ${{ env.BUILD_DATE }} [CI]"
+              git commit -m "Update container aar - ${{ env.BUILD_DATE }} [CI]"
               echo "Pushing to remote repository..."
               git push origin main
-              echo "✓ Successfully pushed Container AAR to ${{ env.TARGET_REPO }}"
+              echo "✓ Successfully pushed container aar to ${{ env.TARGET_REPO }}"
             fi
           else
-            echo "✗ Error: AAR file not found at $SOURCE_AAR"
-            echo "Searching for AAR files..."
+            echo "✗ Error: aar file not found at $SOURCE_AAR"
+            echo "Searching for aar files..."
             find "$GITHUB_WORKSPACE/media/libraries/container" -name "*.aar" -type f 2>/dev/null | while read file; do
               echo "  Found: $file"
             done
             exit 1
           fi
-          
           # 清理 SSH 密钥
           rm -f ~/.ssh/id_ed25519
           rm -f ~/.ssh/config
