--- a/.github/workflows/build-lib-media3-ffmpegdecoder.yml
+++ b/.github/workflows/build-lib-media3-ffmpegdecoder.yml
@@ -56,10 +56,10 @@ jobs:
           # 清理可能存在的全局缓存文件
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
-    
+
       - name: Checkout repo
         uses: actions/checkout@main
- 
+
       - name: Initialization values
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
@@ -69,24 +69,24 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
- 
+
       - name: Setup android ndk
         run: |
           cd "$GITHUB_WORKSPACE"
           wget -q https://dl.google.com/android/repository/android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
           unzip android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip &>/dev/null
           rm -rf android-ndk-${{ github.event.inputs.ANDROID_NDK }}-linux.zip
- 
+
       - name: Setup ninja
         uses: seanmiddleditch/gha-setup-ninja@master
- 
+
       - name: Clone repositories
         run: |
           cd "$GITHUB_WORKSPACE"
           git clone https://github.com/androidx/media -b ${{ github.event.inputs.MEDIA3_BRANCH }} --depth=1
           cd media/libraries/decoder_ffmpeg
           git clone git://source.ffmpeg.org/ffmpeg -b ${{ github.event.inputs.FFMPEG_BRANCH }} --depth=1
- 
+
       - name: Build ffmpeg jni
         run: |
           FFMPEG_MODULE_PATH="$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/src/main
@@ -108,12 +108,12 @@ jobs:
             sed -i '/--disable-vulkan/a\    --enable-nonfree' build_ffmpeg.sh
           fi
           ./build_ffmpeg.sh "${FFMPEG_MODULE_PATH}" "${NDK_PATH}" "${HOST_PLATFORM}" "${ANDROID_ABI}" "${ENABLED_DECODERS[@]}"
- 
+
       - name: Build ffmpeg aar
         run: |
           cd "$GITHUB_WORKSPACE"/media
           ./gradlew lib-decoder-ffmpeg:assembleRelease
- 
+
       # - name: Upload ffmpeg jni
       #   uses: actions/upload-artifact@main
       #   with:
@@ -129,24 +129,21 @@ jobs:
       #     path: |
       #       ${{ env.AAR_PATH }}/*
       #     compression-level: 9
-          
-      - name: Create github release
-        uses: softprops/action-gh-release@master
-        with:
-          tag_name: ${{env.BUILD_DATE}}-ffmpeglib
-          # 要附加到此次发布的文件列表
-          files: |
-            ${{ env.AAR_PATH }}/*
-          # 设置为 true 则每次运行覆盖同名草稿，适用于持续集成测试版
-          draft: false
-          # 是否为预发布版本
-          prerelease: false
+
+      # - name: Create github release
+      #   uses: softprops/action-gh-release@master
+      #   with:
+      #     tag_name: ${{env.BUILD_DATE}}-ffmpeglib
+      #     draft: false
+      #     prerelease: false
+      #     files: |
+      #       ${{ env.AAR_PATH }}/*
 
       # 使用SSH Deploy Key的方式来实现对bv-libs的推送
       # 生成ED25519密钥对（更安全，推荐）
       # ssh-keygen -t ed25519 -C "github-actions@github.com" -f deploy_key
       # 这将在当前目录生成私钥deploy_key和公钥deploy_key.pub
-      
+
       # 将公钥添加到目标仓库的Deploy Keys:
       # zxgv5/bv-libs → "Settings" → "Deploy keys" → "Add deploy key"
       # 填写：
@@ -154,14 +151,14 @@ jobs:
       # Key: 粘贴 deploy_key.pub 内容
       # 重要： 一定要勾选 "Allow write access"
       # 然后点击 "Add key"
-      
+
       # 将私钥添加到源仓库的Secrets：
       # zxgv5/android-ci → "Settings" → "Secrets and variables" → "Actions" → "New repository secret"
       # 填写：
       # Name: BV_LIBS_DEPLOY_KEY
       # Secret: 粘贴 deploy_key 文件的完整内容（包括 -----BEGIN OPENSSH PRIVATE KEY----- 和 -----END OPENSSH PRIVATE KEY-----）
       # 点击 "Add secret"
-      
+
       - name: Push ffmpeg aar to bv-libs repository
         env:
           TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
@@ -170,79 +167,59 @@ jobs:
           echo "Setting up SSH configuration..."
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
-          
           # 写入私钥
           echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          
           # 配置 SSH 不验证主机（可选，简化配置）
           echo "Host github.com" >> ~/.ssh/config
           echo "  StrictHostKeyChecking no" >> ~/.ssh/config
           echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
           chmod 600 ~/.ssh/config
-          
           # 测试 SSH 连接
           echo "Testing SSH connection to GitHub..."
           ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
-          
           # 设置 Git 配置
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git config --global init.defaultBranch main
-          
           # 克隆目标仓库（使用 SSH）
           cd "$GITHUB_WORKSPACE"
           echo "Cloning target repository: ${{ env.TARGET_REPO }}"
           git clone ${{ env.TARGET_REPO }} target-repo
           cd target-repo
-          
           # 确保在 main 分支
           git checkout main
-          
-          # 复制新的 AAR 文件到目标位置
+          # 复制新的 aar 文件到目标位置
           SOURCE_AAR="$GITHUB_WORKSPACE/${{ env.AAR_PATH }}/${{ env.AAR_NAME }}"
           TARGET_DIR="ffmpegDecoder"
-          
-          # 检查 AAR 文件是否存在
+          # 检查 aar 文件是否存在
           if [ -f "$SOURCE_AAR" ]; then
-            echo "✓ Found AAR file: $SOURCE_AAR"
-            
+            echo "✓ Found aar file: $SOURCE_AAR"
             # 确保目标目录存在
             mkdir -p "$TARGET_DIR"
-            
-            # 备份旧文件（可选）
-            # if [ -f "$TARGET_DIR/${{ env.AAR_NAME }}" ]; then
-            #   echo "Backing up old AAR file..."
-            #   TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
-            #   cp "$TARGET_DIR/${{ env.AAR_NAME }}" "$TARGET_DIR/lib-decoder-ffmpeg-release_${TIMESTAMP}.aar.backup"
-            # fi
-            
             # 复制新文件
-            echo "Copying new AAR file..."
+            echo "Copying new aar file..."
             cp -v "$SOURCE_AAR" "$TARGET_DIR/"
-            
             # 提交更改
             echo "Committing changes..."
             git add "$TARGET_DIR/${{ env.AAR_NAME }}"
-            
             # 检查是否有更改
             if git diff --cached --quiet; then
               echo "No changes to commit."
             else
-              git commit -m "Update FFmpeg decoder AAR - ${{ env.BUILD_DATE }} [CI]"
+              git commit -m "Update ffmpeg decoder aar - ${{ env.BUILD_DATE }} [CI]"
               echo "Pushing to remote repository..."
               git push origin main
-              echo "✓ Successfully pushed FFmpeg decoder AAR to ${{ env.TARGET_REPO }}"
+              echo "✓ Successfully pushed ffmpeg decoder aar to ${{ env.TARGET_REPO }}"
             fi
           else
-            echo "✗ Error: AAR file not found at $SOURCE_AAR"
-            echo "Searching for AAR files..."
+            echo "✗ Error: aar file not found at $SOURCE_AAR"
+            echo "Searching for aar files..."
             find "$GITHUB_WORKSPACE/media/libraries/decoder_ffmpeg" -name "*.aar" -type f 2>/dev/null | while read file; do
               echo "  Found: $file"
             done
             exit 1
           fi
-
-          # 清理 SSH 密钥（安全考虑）
+          # 清理 SSH 密钥
           rm -f ~/.ssh/id_ed25519
           rm -f ~/.ssh/config
