--- a/.github/workflows/build-lib-vlc.yml
+++ b/.github/workflows/build-lib-vlc.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           rm -rf ~/.gradle/caches/transforms-*
           rm -rf ~/.android/build-cache/
-          
+
        # 检出ci仓库，以便在runner中调用sh脚本
       - name: Checkout ci source repo
         uses: actions/checkout@main
@@ -58,32 +58,26 @@ jobs:
         run: |
           cd "${{ env.BUILD_DIR }}"
           echo "=== 配置 Android 构建环境 ==="
-          
           # 设置Git身份
           git config --global user.email "ci@github-actions"
           git config --global user.name "GitHub Actions"
-          
           # 导出编译变量
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK="$ANDROID_NDK_ROOT"
           echo "导出编译变量:"
           echo "  ANDROID_SDK=$ANDROID_SDK"
           echo "  ANDROID_NDK=$ANDROID_NDK"
-          
           # 创建 Gradle 的 local.properties
           echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
           echo "ndk.dir=$ANDROID_NDK_ROOT" >> local.properties
           echo "✅ 创建 local.properties"
-          
           # 初始化 Gradle wrapper
           ./gradlew wrapper --gradle-version=${{ env.GRADLE_VERSION }} --distribution-type=all --quiet 2>/dev/null || true
-          
           echo "✅ 环境配置完成"
 
       - name: Modify vlc source code with correct patterns
         run: |
           cd "${{ env.BUILD_DIR }}"
-          
           echo "=== 等待VLC源代码被获取 ==="
           echo "注意：VLC源代码将在第一次构建时自动获取"
           echo "我们将在构建后修改源代码"
@@ -93,22 +87,17 @@ jobs:
         run: |
           cd "${{ env.BUILD_DIR }}"
           echo "开始构建 ARM64 (arm64-v8a) 架构..."
-          
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK="$ANDROID_NDK_ROOT"
-          
           # 首次构建，获取VLC源代码
           time ./buildsystem/compile.sh -l -a arm64 --release -t 2>&1 | tee build_arm64.log
-          
           # 构建完成后修改源代码
           echo "构建完成，开始修改VLC源代码..."
-          
           chmod +x $GITHUB_WORKSPACE/android-ci-source/scripts/customize-vlc.sh
           $GITHUB_WORKSPACE/android-ci-source/scripts/customize-vlc.sh
-          
           # 检查构建结果
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
-            echo "✅ ARM64 AAR 构建成功！"
+            echo "✅ ARM64 aar 构建成功！"
             cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-arm64.aar
           else
             echo "⚠️  未找到ARM64 AAR文件。查看构建日志末尾:"
@@ -141,38 +130,31 @@ jobs:
             echo "发现 ndk-bundle，可能引起冲突，重命名..."
             mv "$ANDROID_SDK_ROOT/ndk-bundle" "$ANDROID_SDK_ROOT/ndk-bundle.backup"
           fi
-
           # 设置正确的环境变量
           export ANDROID_NDK="${{ env.ANDROID_NDK }}"
           export ANDROID_SDK="$ANDROID_SDK_ROOT"
           export ANDROID_NDK_ROOT="${{ env.ANDROID_NDK }}"
           export ANDROID_SDK_ROOT="$ANDROID_SDK_ROOT"
-    
           # 打印环境变量用于调试
           echo "=== 环境变量检查 ==="
           echo "ANDROID_NDK: $ANDROID_NDK"
           echo "ANDROID_SDK: $ANDROID_SDK"
           echo "ANDROID_NDK_ROOT: $ANDROID_NDK_ROOT"
           echo "ANDROID_SDK_ROOT: $ANDROID_SDK_ROOT"
-
           # 验证使用的 NDK
           echo "使用的 NDK 路径: $ANDROID_NDK"
           $ANDROID_NDK/ndk-build --version | head -5
-
           # 更新 local.properties
           echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
           echo "ndk.dir=$ANDROID_NDK" >> local.properties
-
           echo "开始构建 ARMv7 (armeabi-v7a) 架构..."
           # 先检查脚本是否存在
           if [ ! -f "./buildsystem/compile.sh" ]; then
             echo "错误: compile.sh 脚本不存在！"
             exit 1
           fi
-    
           # 给脚本添加执行权限
           chmod +x ./buildsystem/compile.sh
-    
           # 在构建前验证源代码修改
           echo "验证源代码修改..."
           if [ -d "libvlcjni/vlc" ]; then
@@ -185,13 +167,11 @@ jobs:
               fi
             done
           fi
-    
           # 使用-b参数跳过源码检查
           time ANDROID_NDK="$ANDROID_NDK" ANDROID_SDK="$ANDROID_SDK" \
               ./buildsystem/compile.sh -l -a arm --release -t -b 2>&1 | tee build_armv7.log
-
           if ls libvlcjni/libvlc/build/outputs/aar/*.aar 1> /dev/null 2>&1; then
-            echo "✅ ARMv7 AAR 构建成功！"
+            echo "✅ ARMv7 aar 构建成功！"
             cp libvlcjni/libvlc/build/outputs/aar/*.aar ../libvlc-armv7.aar
           else
             echo "❌ 未找到ARMv7 AAR文件。关键错误如下:"
@@ -204,14 +184,11 @@ jobs:
         run: |
           echo "准备合并AAR文件..."
           cd "${{ env.BUILD_DIR }}"
-          
           # 查找所有可能生成的AAR文件
           find . -name "*.aar" -type f -exec cp {} ../ \;
           cd ..
-          
           echo "找到的AAR文件："
           ls -la *.aar 2>/dev/null || { echo "未找到任何AAR文件，构建可能失败。"; exit 1; }
-          
           # 智能合并：自动识别基础包和架构包
           /bin/bash -c '
           aars=(*.aar)
@@ -229,43 +206,39 @@ jobs:
           if [ -z "$BASE_AAR" ]; then
               BASE_AAR="${aars[0]}"
           fi
-          
           echo "使用 $BASE_AAR 作为基础包进行合并"
           mkdir -p merged-aar
           unzip -q "$BASE_AAR" -d merged-aar
-          
           for aar in "${aars[@]}"; do
               if [ "$aar" != "$BASE_AAR" ]; then
                   echo "合并架构库从: $aar"
                   unzip -q -u "$aar" -d merged-aar 2>/dev/null || true
               fi
           done
-          
           cd merged-aar
           zip -qr ../libvlc-release.aar .
           cd ..
-          
           echo "✅ 合并完成！最终产物: libvlc-release.aar"
           echo "包含的架构:"
           unzip -l libvlc-release.aar | grep "jni/.*/" | cut -d"/" -f2 | sort -u || echo "无法列出架构"
           '
 
-      - name: Create github release
-        uses: softprops/action-gh-release@master
-        with:
-          tag_name: ${{env.BUILD_DATE}}-vlclib
-          files: |
-            libvlc-release.aar
-            libvlc-arm64.aar
-            libvlc-armv7.aar
-          draft: false
-          prerelease: false
+      # - name: Create github release
+      #   uses: softprops/action-gh-release@master
+      #   with:
+      #     tag_name: ${{env.BUILD_DATE}}-vlclib
+      #     files: |
+      #       libvlc-release.aar
+      #       libvlc-arm64.aar
+      #       libvlc-armv7.aar
+      #     draft: false
+      #     prerelease: false
 
       # 使用SSH Deploy Key的方式来实现对bv-libs的推送
       # 生成ED25519密钥对（更安全，推荐）
       # ssh-keygen -t ed25519 -C "github-actions@github.com" -f deploy_key
       # 这将在当前目录生成私钥deploy_key和公钥deploy_key.pub
-      
+
       # 将公钥添加到目标仓库的Deploy Keys:
       # zxgv5/bv-libs → "Settings" → "Deploy keys" → "Add deploy key"
       # 填写：
@@ -273,83 +246,82 @@ jobs:
       # Key: 粘贴 deploy_key.pub 内容
       # 重要： 一定要勾选 "Allow write access"
       # 然后点击 "Add key"
-      
+
       # 将私钥添加到源仓库的Secrets：
       # zxgv5/android-ci → "Settings" → "Secrets and variables" → "Actions" → "New repository secret"
       # 填写：
       # Name: BV_LIBS_DEPLOY_KEY
       # Secret: 粘贴 deploy_key 文件的完整内容（包括 -----BEGIN OPENSSH PRIVATE KEY----- 和 -----END OPENSSH PRIVATE KEY-----）
       # 点击 "Add secret"
-      - name: Push vlc aar to bv-libs repository
-        env:
-          TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
-        run: |
-          # 设置 SSH 密钥和配置
-          echo "Setting up SSH configuration..."
-          mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
-          
-          # 写入私钥
-          echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          
-          # 配置 SSH 不验证主机
-          echo "Host github.com" >> ~/.ssh/config
-          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
-          echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
-          chmod 600 ~/.ssh/config
-          
-          # 测试 SSH 连接
-          echo "Testing SSH connection to GitHub..."
-          ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
-          
-          # 设置 Git 配置
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git config --global init.defaultBranch main
-          
-          # 克隆目标仓库
-          cd "$GITHUB_WORKSPACE"
-          echo "Cloning target repository: ${{ env.TARGET_REPO }}"
-          git clone ${{ env.TARGET_REPO }} target-repo
-          cd target-repo
-          
-          # 确保在 main 分支
-          git checkout main
-          
-          # 复制新的 AAR 文件到目标位置
-          SOURCE_AAR="$GITHUB_WORKSPACE/libvlc-release.aar"
-          TARGET_DIR="libVLC"
-          
-          # 检查 AAR 文件是否存在
-          if [ -f "$SOURCE_AAR" ]; then
-            echo "✓ Found AAR file: $SOURCE_AAR"
-            
-            # 确保目标目录存在
-            mkdir -p "$TARGET_DIR"
-            
-            # 复制新文件
-            echo "Copying new AAR file..."
-            cp -v "$SOURCE_AAR" "$TARGET_DIR/libvlc-release.aar"
-            
-            # 提交更改
-            echo "Committing changes..."
-            git add "$TARGET_DIR/libvlc-release.aar"
-            
-            # 检查是否有更改
-            if git diff --cached --quiet; then
-              echo "No changes to commit."
-            else
-              git commit -m "Update VLC AAR (multi-arch: arm64+v7a) - ${{ env.BUILD_DATE }} [CI]"
-              echo "Pushing to remote repository..."
-              git push origin main
-              echo "✓ Successfully pushed multi-architecture VLC AAR to ${{ env.TARGET_REPO }}"
-            fi
-          else
-            echo "✗ Error: AAR file not found at $SOURCE_AAR"
-            exit 1
-          fi
-          
-          # 清理 SSH 密钥
-          rm -f ~/.ssh/id_ed25519
-          rm -f ~/.ssh/config
+
+      # - name: Push vlc aar to bv-libs repository
+      #   env:
+      #     TARGET_REPO: "git@github.com:zxgv5/bv-libs.git"
+      #   run: |
+      #     # 设置 SSH 密钥和配置
+      #     echo "Setting up SSH configuration..."
+      #     mkdir -p ~/.ssh
+      #     chmod 700 ~/.ssh
+      #     # 写入私钥
+      #     echo "${{ secrets.BV_LIBS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+      #     chmod 600 ~/.ssh/id_ed25519
+      #     # 配置 SSH 不验证主机
+      #     echo "Host github.com" >> ~/.ssh/config
+      #     echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+      #     echo "  UserKnownHostsFile /dev/null" >> ~/.ssh/config
+      #     chmod 600 ~/.ssh/config
+      #     # 测试 SSH 连接
+      #     echo "Testing SSH connection to GitHub..."
+      #     ssh -T git@github.com 2>&1 | grep -v "successfully authenticated" || true
+      #     # 设置 Git 配置
+      #     git config --global user.name "GitHub Actions"
+      #     git config --global user.email "actions@github.com"
+      #     git config --global init.defaultBranch main
+      #     # 克隆目标仓库
+      #     cd "$GITHUB_WORKSPACE"
+      #     echo "Cloning target repository: ${{ env.TARGET_REPO }}"
+      #     git clone ${{ env.TARGET_REPO }} target-repo
+      #     cd target-repo
+      #     # 确保在 main 分支
+      #     git checkout main
+      #     # 复制新的 aar 文件到目标位置
+      #     SOURCE_AAR="$GITHUB_WORKSPACE/libvlc-release.aar"
+      #     TARGET_DIR="libVLC"
+      #     # 检查 aar 文件是否存在
+      #     if [ -f "$SOURCE_AAR" ]; then
+      #       echo "✓ Found aar file: $SOURCE_AAR"
+      #       # 确保目标目录存在
+      #       mkdir -p "$TARGET_DIR"
+      #       # 复制新文件
+      #       echo "Copying new aar file..."
+      #       cp -v "$SOURCE_AAR" "$TARGET_DIR/libvlc-release.aar"
+      #       # 提交更改
+      #       echo "Committing changes..."
+      #       git add "$TARGET_DIR/libvlc-release.aar"
+      #       # 检查是否有更改
+      #       if git diff --cached --quiet; then
+      #         echo "No changes to commit."
+      #       else
+      #         git commit -m "Update libvlc aar (multi-arch: arm64+v7a) - ${{ env.BUILD_DATE }} [CI]"
+      #         echo "Pushing to remote repository..."
+      #         git push origin main
+      #         echo "✓ Successfully pushed multi-architecture libvlc aar to ${{ env.TARGET_REPO }}"
+      #       fi
+      #     else
+      #       echo "✗ Error: aar file not found at $SOURCE_AAR"
+      #       exit 1
+      #     fi
+      #     # 清理 SSH 密钥
+      #     rm -f ~/.ssh/id_ed25519
+      #     rm -f ~/.ssh/config
+
+      - name: Push aar to bv-libs repository
+        uses: ./.github/workflows/reusable-push-aar-to-bv-libs.yml # 复用工作流的路径（同仓库）
+        with:
+          SOURCE_AAR: "${{ github.workspace }}/libvlc-release.aar" # 源aar路径
+          TARGET_NAME: "libvlc" # 自定义目标名称，用于信息显示
+          TARGET_DIR: "libVLC" # 自定义目标目录，本aar文件在bv-libs仓库中所在目录
+          TARGET_AAR: "libvlc-release.aar" # 自定义目标文件名
+          BUILD_DATE: "${{ env.BUILD_DATE }}" # 可选：自定义构建日期
+        secrets:
+          BV_LIBS_DEPLOY_KEY: "${{ secrets.BV_LIBS_DEPLOY_KEY }}" # 传递密钥
